swagger dari create tiket
